--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-config-next": "13.4.10",
     "lucide-react": "^0.261.0",
     "next": "13.4.10",
+    "next-intl": "^3.0.0-beta.9",
     "openai": "^3.3.0",
     "postcss": "8.4.26",
     "react": "18.2.0",
