--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@clerk/localizations": "^1.24.0",
     "@clerk/nextjs": "^4.22.1",
     "@hookform/resolvers": "^3.1.1",
     "@prisma/client": "^5.0.0",
