--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "crisp-sdk-web": "^1.0.19",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
+    "langchain": "^0.0.118",
     "lucide-react": "^0.261.0",
     "next": "13.4.10",
     "next-intl": "^3.0.0-beta.9",
